crates/zendriver-mcp/tests/snapshots/schema_snapshots__intercept_snaps__intercept_list_out.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::intercept::ListRulesOutput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: ListRulesOutput
description: "Output of `browser_intercept_list_rules`."
type: object
properties:
  rules:
    description: "One entry per live rule. Sorted by `rule_id` so the output is stable\nacross runs (rather than HashMap-iteration-order chaos)."
    type: array
    items:
      $ref: "#/$defs/RuleSummary"
required:
  - rules
$defs:
  RuleSummary:
    description: Description of a single live interception rule.
    type: object
    properties:
      action_kind:
        description: "`\"block\"`, `\"redirect\"`, `\"respond\"`, or `\"modify_request\"`."
        type: string
      pattern:
        description: URL pattern the rule was registered with.
        type: string
      rule_id:
        description: "Same id `browser_intercept_add_rule` returned."
        type: string
    required:
      - rule_id
      - pattern
      - action_kind
