crates/zendriver-mcp/tests/snapshots/schema_snapshots__intercept_snaps__intercept_remove_in.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::intercept::RemoveRuleInput)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: RemoveRuleInput
description: "Input for `browser_intercept_remove_rule`."
type: object
properties:
  rule_id:
    description: "Id returned by an earlier `browser_intercept_add_rule` call."
    type: string
additionalProperties: false
required:
  - rule_id
